--- a/quantitative-training.html
+++ b/quantitative-training.html
@@ -15,7 +15,9 @@
 
 
     .main_text-container li {
-        text-indent: 20px; /* Adjust the value as needed */
+        text-indent: 10px; /* Adjust the value as needed */
+        padding-left: 15%;
+        padding-right: 10%;
     }
         
     </style>
@@ -40,9 +42,9 @@
 <div class="text-container main_text-container">
     <p class="main_text">
 
-               <b>The problem:</b> During my years in the corporate world, I noticed that the biggest barrier holding smart, young people back are their data skills. Most analysts struggle with creating reliable data analyses and communicating their findings. Unfortunately, universities and corporate trainings do not adequately provide the skill sets business analysts need. <br> 
+               <b>The problem:</b> During my years in the corporate world, I noticed that the biggest barrier holding smart, young people back are their data skills. Most analysts struggle with creating reliable data analyses and communicating their findings. Unfortunately, universities and corporate trainings do not adequately provide the skill sets business analysts need. <br> <br> 
 
-                <b>My goal:</b> Having tackled a variety of complex problems in my previous work experiences, I now want to pass on my knowledge. My goal is twofold. I want to teach business analysts how to build models quickly and reliably. And then I want to show them how to effectively communicate their findings. <br> 
+                <b>My goal:</b> Having tackled a variety of complex problems in my previous work experiences, I now want to pass on my knowledge. My goal is twofold. I want to teach business analysts how to build models quickly and reliably. And then I want to show them how to effectively communicate their findings. <br> <br> 
 
                 <b>My solution:</b> I found that 1:1 tutoring is the best way to improve someone’s quantitative skills. Differently from watching online courses or Youtube videos, analysts with an individual tutor can focus on their specific knowledge gaps and job requirements. I am also happy to work on a group setting. I work with both Excel and Google Sheets. If useful, I can also work with R.  <br> <br> 
           
