--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ With a degree in Statistics and five years of experience in corporate strategy r
                 <b>Quantitative coaching:</b> Quantitative coaching: I want to teach business analysts the quantitative skills they need to thrive. I have noticed that the biggest hurdle faced by analysts is the ability to accurately and efficiently analyze data and share their findings. Whether you are a student, analyst, or HR department of a company, I can help you out. 
                 <br> <br>
 
-                I like to get to know new people. Please reach out at pedro@girardi.io. <br> <br><br> <br>
+                   If you would like to connect, shoot me an email at contact@girardi.io. <br> <br><br> <br>
             </p>
         </div>
 
