--- a/quantitative-training.html
+++ b/quantitative-training.html
@@ -63,7 +63,7 @@
     <a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75" target="_blank">
         <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
     </a>
-    contact@girardi.io
+         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io
 </footer>
 
 </body>
