--- a/italiano.html
+++ b/italiano.html
@@ -40,12 +40,13 @@ footer a {
 <header>
     <div class="mod_br"></div>
     <div class="name_header">
-        <a href="/index"><div class="button_name">Pedro Girardi</div></a>
+        <a href="/italiano"><div class="button_name">Pedro Girardi</div></a>
     </div>
     <div class="margin_header">
         <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
         <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
         <a class="one" href="/cv-it"><div class="sections_header"> CV </div></a>
+        <a class="one" href="/index"><div class="sections_header"> English </div></a>
     </div>
     <div class="mod_br_small"></div>
 </header>
