--- a/quantitative-training.html
+++ b/quantitative-training.html
@@ -42,7 +42,7 @@
 <div class="text-container main_text-container">
     <p class="main_text">
 
-               <b>The problem:</b> During my years in the corporate world, I noticed that the biggest barrier holding smart, young people back are their data skills. Most analysts struggle with creating reliable data analyses and communicating their findings. Unfortunately, universities and corporate trainings do not adequately provide the skill sets business analysts need. <br> <br> 
+               <b>The problem:</b> I have noticed that the biggest barrier holding smart, young people back are their data skills. Most analysts struggle with creating reliable data analyses and communicating their findings. Unfortunately, universities and corporate trainings do not empower young people for success in business analyst roles. <br> <br> 
 
                 <b>My goal:</b> Having tackled a variety of complex problems in my previous work experiences, I now want to pass on my knowledge. My goal is twofold. I want to teach business analysts how to build models quickly and reliably. And then I want to show them how to effectively communicate their findings. <br> <br> 
 
