--- a/cv-it.html
+++ b/cv-it.html
@@ -17,11 +17,12 @@
         <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
         <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
         <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
+        <a class="one" href="/index"><div class="sections_header"> English </div></a>
     </div>
     <div class="mod_br_small"></div>
 </header>
     
-<iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/preview" width="100%" height="1300px" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1qAJBdDI-gZYhxaOug7hRBgggJfYvStkY/preview" width="100%" height="1200px" frameborder="0"></iframe>
 
 </body>
 </html>
