--- a/italiano.html
+++ b/italiano.html
@@ -56,22 +56,21 @@ footer a {
     <div class="content-container">
         <div class="text-container">
             <p class="ex1">
-                Salve, sono Pedro, consulente aziendale attualmente basato a Montepulciano. Con oltre cinque anni di esperienza in ruoli strategici presso aziende come BCG negli Stati Uniti e Red Bull in Germania, opero attualmente come consulente indipendente.
-            
-
+                Mi chiamo Pedro Girardi, e sono un consulente aziendale freelance di origini brasiliane, attualmente basato a Montepulciano, in provincia di Siena. Con oltre cinque anni di esperienza in ruoli strategici presso aziende come Boston Consulting Group (BCG) negli Stati Uniti e Red Bull in Germania, opero attualmente come consulente indipendente.        
             <p class="main_text">
 
-Vanto una formazione internazionale che mi consente di adattarmi rapidamente a nuovi contesti e stili di lavoro. Ho trascorso la mia infanzia in Brasile, ho studiato negli Stati Uniti e ho lavorato in Brasile, Italia, Germania e negli Stati Uniti. Ulteriori dettagli sul mio percorso sono disponibili nel mio curriculum. Al momento, offro due tipologie di servizi.
+Vanto una formazione internazionale che mi consente di adattarmi rapidamente a nuovi contesti e stili di lavoro. Ho trascorso la mia infanzia in Brasile, ho studiato negli Stati Uniti e ho lavorato in Brasile, Italia, Germania e negli Stati Uniti. Se lo desideri, puoi trovare  tutti i dettagli sul mio percorso nel mio curriculum. Al momento, offro due tipologie di servizi.
+                
                 <br> <br>
 
                 <b>Consulenza aziendale:</b> Laureato in Statistica con cinque anni di esperienza in ruoli di strategia aziendale, posso risolvere complessi problemi legati ai dati e offrire raccomandazioni pratiche per la tua azienda. Ho collaborato con imprese di tutte le dimensioni e in vari settori, con particolare focus nell'ambito del turismo.
                 <br> <br>
 
-                <b>Quantitative coaching:</b> Desidero impartire competenze quantitative agli analisti aziendali, aiutandoli a eccellere. Ho notato che la principale sfida per gli analisti è la capacità di analizzare con precisione ed efficienza i dati e condividere le proprie conclusioni. Che Lei sia uno studente, un analista o un dipartimento HR di un'azienda, ritengo di aiutarLa. 
+                <b>Quantitative coaching:</b> Desidero aiutare gli analisti aziendali ad eccellere attraverso il rafforzamento delle loro competenze quantitative. Ho notato che la principale sfida per gli analisti è la capacità di analizzare con precisione ed efficienza i dati e condividere le proprie conclusioni. Che tu sia uno studente, un analista o un dipartimento HR di un'azienda, ritengo di poterti aiutare.   
                 <br> <br>
 
 
-                Mi piace conoscere nuove persone. Non esiti a contattarmi a pedro@girardi.io.<br> <br><br> <br>
+                Mi piace conoscere nuove persone. Non esitare a contattarmi all'indirizzo pedro@girardi.io. <br> <br><br> <br>
             </p>
         </div>
 
