--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ I have an international background, which helps me to quickly adapt to new circu
 
                 <b>Business consulting:</b>
 
-With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. I have worked with companies of all sizes and across many industries. My most recent work has been in the tourism space.
+With a degree in Statistics and five years of experience in corporate strategy roles, I can solve complicated data problems and provide practical recommendations to your business. I have worked with companies of all sizes and across many industries. 
                 <br> <br>
 
-                <b>Quantitative coaching:</b> Quantitative coaching: I want to teach business analysts the quantitative skills they need to thrive. I have noticed that the biggest hurdle faced by analysts is the ability to accurately and efficiently analyze data and share their findings. Whether you are a student, analyst, or HR department of a company, I can help you out. 
+                <b>Quantitative coaching:</b> I want to teach business analysts the quantitative skills they need to thrive. I have noticed that the biggest hurdle faced by analysts is the ability to accurately and efficiently analyze data and share their findings. Whether you are a student, analyst, or HR department of a company, I can help you out. 
                 <br> <br>
 
                    If you would like to connect, shoot me an email at contact@girardi.io. <br> <br><br> <br>
