--- a/business-consulting.html
+++ b/business-consulting.html
@@ -30,22 +30,19 @@
 
         .work-experience {
             margin-bottom: 40px; /* Adjust margin between work experiences */
+            margin-left: 10%; /* Adjust left margin */
         }
 
         .work-experience h2 {
-            font-size: 24px;
+            font-size: 18px; /* Adjust font size */
             color: black;
             margin-bottom: 10px;
         }
 
         .work-experience ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .work-experience li {
-            font-size: 16px;
-            margin-bottom: 10px;
+            list-style-type: disc; /* Use disc for bullets */
+            padding-left: 20px; /* Add some padding to align bullets */
+            font-size: 16px; /* Adjust font size */
         }
     </style>
 </head>
@@ -60,10 +57,6 @@
 
         <div class="content-container">
             <div class="text-container">
-                <p class="ex1">
-                    <font size="+16">Hi,</font> my name is Pedro, and I am a business consultant with five years of
-                    experience in strategy roles at the likes of BCG US and Red Bull Germany. Currently, I am working as
-                    an independent consultant.
 
                 <p class="main_text">
 
