--- a/business-consulting.html
+++ b/business-consulting.html
@@ -60,26 +60,8 @@
 
                 <p class="main_text">
 
-                    I have an international background, which helps me to quickly adapt to new circumstances and work
-                    styles. I grew up in Brazil and went to college in the US and have worked in the US, Italy, Germany,
-                    and Brazil. You can get more detailed info in my CV. I am currently offering two types of services.
-                    <br> <br>
-
-                    <b>Business consulting:</b>
-
-                    With a degree in Statistics and five years of experience in corporate strategy roles, I can solve
-                    complicated data problems and provide practical recommendations to your business. I have worked with
-                    companies of all sizes and across many industries. My most recent work has been in the tourism
-                    space.
-                    <br> <br>
-
-                    <b>Quantitative coaching:</b> Quantitative coaching: I want to teach business analysts the
-                    quantitative skills they need to thrive. I have noticed that the biggest hurdle faced by analysts is
-                    the ability to accurately and efficiently analyze data and share their findings. Whether you are a
-                    student, analyst, or HR department of a company, I can help you out.
-                    <br> <br>
-
-                    If you would like to connect, shoot me an email at contact@girardi.io. <br> <br><br> <br>
+                    <b>I am a BCG-trained consultant with a passion for data and for meeting new people. </b> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. <br><br> 
+                    
                 </p>
             </div>
 
