--- a/business-consulting.html
+++ b/business-consulting.html
@@ -50,7 +50,19 @@
 <body>
 
     <header>
-        <!-- Your existing header content -->
+<header>
+    <div class="mod_br"></div>
+    <div class="name_header">
+        <a href="/index"><div class="button_name">Pedro Girardi</div></a>
+    </div>
+    <div class="margin_header">
+        <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
+        <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
+        <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
+        <a class="one" href="/italiano"><div class="sections_header"> Italiano </div></a>
+    </div>
+    <div class="mod_br_small"></div>
+</header>
     </header>
 
     <main>
@@ -105,9 +117,12 @@
 
     </main>
 
-    <footer>
-        <!-- Your existing footer content -->
-    </footer>
+<footer>
+    <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
+        <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
+    </a>
+         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io
+</footer>
 
 </body>
 
