--- a/business-consulting.html
+++ b/business-consulting.html
@@ -26,6 +26,7 @@
 
         .work-experience-container {
             margin-top: 50px; /* Adjust margin based on your design */
+            width: 35%; /* Adjust the width of the work experience section */
         }
 
         .work-experience {
@@ -50,19 +51,17 @@
 <body>
 
     <header>
-<header>
-    <div class="mod_br"></div>
-    <div class="name_header">
-        <a href="/index"><div class="button_name">Pedro Girardi</div></a>
-    </div>
-    <div class="margin_header">
-        <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
-        <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
-        <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
-        <a class="one" href="/italiano"><div class="sections_header"> Italiano </div></a>
-    </div>
-    <div class="mod_br_small"></div>
-</header>
+        <div class="mod_br"></div>
+        <div class="name_header">
+            <a href="/index"><div class="button_name">Pedro Girardi</div></a>
+        </div>
+        <div class="margin_header">
+            <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
+            <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
+            <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
+            <a class="one" href="/italiano"><div class="sections_header"> Italiano </div></a>
+        </div>
+        <div class="mod_br_small"></div>
     </header>
 
     <main>
@@ -73,56 +72,52 @@
                 <p class="main_text">
 
                     <b>I am a BCG-trained consultant with a passion for data and for meeting new people. </b> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. <br><br> 
-                    
+
                 </p>
             </div>
 
-            <div class="image-container">
-                <img src="profile.jpg" alt="Profile">
-            </div>
-        </div>
+            <div class="work-experience-container">
+                <!-- Work Experience 1 -->
+                <div class="work-experience">
+                    <h2>Work Experience 1</h2>
+                    <ul>
+                        <li>Bullet point 1</li>
+                        <li>Bullet point 2</li>
+                        <li>Bullet point 3</li>
+                    </ul>
+                </div>
 
-        <!-- Work Experience Section -->
-        <div class="work-experience-container">
-            <!-- Work Experience 1 -->
-            <div class="work-experience">
-                <h2>Work Experience 1</h2>
-                <ul>
-                    <li>Bullet point 1</li>
-                    <li>Bullet point 2</li>
-                    <li>Bullet point 3</li>
-                </ul>
+                <!-- Work Experience 2 -->
+                <div class="work-experience">
+                    <h2>Work Experience 2</h2>
+                    <ul>
+                        <li>Bullet point 1</li>
+                        <li>Bullet point 2</li>
+                        <li>Bullet point 3</li>
+                    </ul>
+                </div>
+
+                <!-- Work Experience 3 -->
+                <div class="work-experience">
+                    <h2>Work Experience 3</h2>
+                    <ul>
+                        <li>Bullet point 1</li>
+                        <li>Bullet point 2</li>
+                        <li>Bullet point 3</li>
+                    </ul>
+                </div>
             </div>
 
-            <!-- Work Experience 2 -->
-            <div class="work-experience">
-                <h2>Work Experience 2</h2>
-                <ul>
-                    <li>Bullet point 1</li>
-                    <li>Bullet point 2</li>
-                    <li>Bullet point 3</li>
-                </ul>
-            </div>
-
-            <!-- Work Experience 3 -->
-            <div class="work-experience">
-                <h2>Work Experience 3</h2>
-                <ul>
-                    <li>Bullet point 1</li>
-                    <li>Bullet point 2</li>
-                    <li>Bullet point 3</li>
-                </ul>
-            </div>
         </div>
 
     </main>
 
-<footer>
-    <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
-        <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
-    </a>
-         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io
-</footer>
+    <footer>
+        <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
+            <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
+        </a>
+             &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io
+    </footer>
 
 </body>
 
