--- a/business-consulting.html
+++ b/business-consulting.html
@@ -10,28 +10,17 @@
         /* Your existing styles */
 
         .content-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start; /* Align items at the top */
-        }
-
-        .text-container {
-            width: 35%;
-        }
-
-        .image-container img {
-            width: 100%;
-            height: auto;
+            /* Remove the flex layout */
         }
 
         .work-experience-container {
-            margin-top: 50px; /* Adjust margin based on your design */
-            width: 45%; /* Adjust the width of the work experience section */
+            margin-top: 30px; /* Adjust margin based on your design */
+            width: 100%; /* Adjust the width of the work experience section */
         }
 
         .work-experience {
-            margin-bottom: 40px; /* Adjust margin between work experiences */
-            margin-left: 10%; /* Adjust left margin */
+            margin-bottom: 20px; /* Adjust margin between work experiences */
+            /* Remove margin-left */
         }
 
         .work-experience h2 {
@@ -110,6 +99,8 @@
                         <li><b>Solution:</b> I analyzed transaction data to run pre-post model on the impact of partnership on sales and profitability. The analyses showed that the partnership had significantly hurt our client’s bottom line. I designed the quantitative part of our presentation for CEO, who chose to follow our recommendations. We estimated savings at $118MM over the duration of the contract.</li>
                         <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li>
                     </ul>
+<br><br><br>
+                    
                 </div>
             </div>
           
