--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ With a degree in Statistics and five years of experience in corporate strategy r
     <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
         <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
     </a>
-         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io
+         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp P.IVA 01586900522
 </footer>
 
 </body>
