--- a/italiano.html
+++ b/italiano.html
@@ -85,7 +85,7 @@ Vanto una formazione internazionale che mi consente di adattarmi rapidamente a n
     <a href="https://www.linkedin.com/in/pedrogirardi/" target="_blank">
         <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
     </a>
-         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io
+         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp P.IVA 01586900522
 </footer>
 
 </body>
