--- a/quantitative-training.html
+++ b/quantitative-training.html
@@ -33,6 +33,7 @@
         <a class="one" href="/business-consulting"><div class="sections_header"> Business Consulting </div></a>
         <a class="one" href="/quantitative-training"><div class="sections_header"> Quantitative Tutoring for Analysts </div></a>
         <a class="one" href="/cv"><div class="sections_header"> CV </div></a>
+        <a class="one" href="/italiano"><div class="sections_header"> Italiano </div></a>
     </div>
     <div class="mod_br_small"></div>
 </header>
