--- a/business-consulting.html
+++ b/business-consulting.html
@@ -7,36 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Business Consulting - Pedro Girardi - </title>
     <style>
-        /* Your existing styles */
-
-        .content-container {
-            /* Remove the flex layout */
-        }
-
-        .work-experience-container {
-            margin-top: 30px; /* Adjust margin based on your design */
-            width: 100%; /* Adjust the width of the work experience section */
-        }
-
-        .work-experience {
-            margin-bottom: 20px; /* Adjust margin between work experiences */
-            /* Remove margin-left */
-        }
-
-        .work-experience h2 {
-            font-size: 18px; /* Adjust font size */
-            color: black;
-            margin-bottom: 10px;
-        }
-
-        .work-experience ul {
-            list-style-type: disc; /* Use disc for bullets */
-            padding-left: 20px; /* Add some padding to align bullets */
+      .main_text {
             font-size: 16px; /* Adjust font size */
-        }
-
-        .main_text {
-            font-size: 18px; /* Adjust font size */
             text-align: justify;
         }
     </style>
@@ -63,10 +35,10 @@
         <div class="content-container">
             <div class="text-container">
                 <p class="main_text">
-                    <b><font size="+4">I am a BCG-trained consultant with a passion for data and for meeting new people.</b> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. </font></p>
-            </div>
-
-            <div class="work-experience-container">
+                    <b>I am a BCG-trained consultant with a passion for data and for meeting new people.</b> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. 
+                    <br> <br>
+                    Here are some of my favorite projects: 
+                    
                 <h2>Profitability per product line estimation </h2>
                 <ul>
                     <li><b>Where:</b> Freelancing, American Italian tourism company</li>
