--- a/business-consulting.html
+++ b/business-consulting.html
@@ -12,7 +12,7 @@
             text-align: justify;
         }
 
-            .main_text-container li {
+    .main_text-container li {
         text-indent: 10px; /* Adjust the value as needed */
         padding-left: 15%;
         padding-right: 10%;
@@ -39,13 +39,13 @@
     <main>
 
         <div class="content-container">
-            <div class="text-container">
+            <div class="text-container main_text-container">
                 <p class="main_text">
-                    <font size="+4"><b>I am a BCG-trained consultant with a passion for data and for meeting new people.</b></font> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. 
+                    <font size="+1"><b>I am a BCG-trained consultant with a passion for data and for meeting new people.</b></font> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. 
                     <br> <br>
-                    Here are some of my favorite projects: 
+                    Here are some of my favorite projects: <br> <br>
                     
-                <font size="+4"><b>Profitability per product line estimation </font></b>
+                <font size="+1"><b>Profitability per product line estimation </font></b>
                 <ul>
                     <li><b>Where:</b> Freelancing, American Italian tourism company</li>
                     <li><b>Problem:</b> client did not know the labor costs of each product, limiting strategical decision-making</li>
@@ -53,7 +53,7 @@
                     <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li>
                 </ul>
 
-                <font size="+4"><b>Implementation of AdTech Product</font></b>
+                <font size="+1"><b>Implementation of AdTech Product</font></b>
                 <ul>
                     <li><b>Where:</b> Delivery Hero (Germany), working directly with LATAM, APAC, and MENA regional teams </li>
                     <li><b>Problem:</b> A new AdTech product was the biggest bet of the year, but did not generate any growth.</li>
@@ -61,7 +61,7 @@
                     <li><b>Skills:</b> Excel, BigQuery, project management </li>
                 </ul>
 
-                <font size="+4"><b>Go-to-market strategy</font></b>
+                <font size="+1"><b>Go-to-market strategy</font></b>
                 <ul>
                     <li><b>Where:</b> BCG US, Fortune 500 client</li>
                     <li><b>Problem:</b> Our client, a major distributor, wanted advice on the negotiation of a new contract with a business partner (group purchasing organization)</li>
