--- a/business-consulting.html
+++ b/business-consulting.html
@@ -53,26 +53,26 @@
                     <br> <br>
                     Here are some of my favorite projects: <br> <br> </p>
                     
-                <font size="+1"><b>Profitability per product line estimation </font></b>
+                <p class="main_text"><font size="+1"><b>Profitability per product line estimation </font></b>
                     <li><b>Where:</b> Freelancing, American Italian tourism company</li>
                     <li><b>Problem:</b> client did not know the labor costs of each product, limiting strategical decision-making</li>
                     <li><b>Solution:</b> I estimated labor costs across product lines. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes). Once I calculated the costs and profitability per product line, I showed some of the growth bets of the company and its largest B2B client were actually not profitable. </li>
-                    <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li><br>
+                    <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li></p><br>
 
-                <font size="+1"><b>Implementation of AdTech Product</font></b>
+                <p class="main_text"><font size="+1"><b>Implementation of AdTech Product</font></b>
                     <li><b>Where:</b> Delivery Hero (Germany), working directly with LATAM, APAC, and MENA regional teams </li>
                     <li><b>Problem:</b> A new AdTech product was the biggest bet of the year, but did not generate any growth.</li>
                     <li><b>Solution:</b> I project managed an investigation led by the VP of Global Sales and Revenue. I partnered with local analytics teams to test our product and identify technical issues and sales gaps. After critical technical changes and improved sales guidance, the product grew from €3MM to €10MM within 12 months.</li>
-                    <li><b>Skills:</b> Excel, BigQuery, project management </li><br>
+                    <li><b>Skills:</b> Excel, BigQuery, project management </li></p><br>
 
-                <font size="+1"><b>Go-to-market strategy</font></b>
+                <p class="main_text"><font size="+1"><b>Go-to-market strategy</font></b>
                     <li><b>Where:</b> BCG US, Fortune 500 client</li>
                     <li><b>Problem:</b> Our client, a major distributor, wanted advice on the negotiation of a new contract with a business partner (group purchasing organization)</li>
                     <li><b>Solution:</b> I analyzed transaction data to run pre-post model on the impact of partnership on sales and profitability. The analyses showed that the partnership had significantly hurt our client’s bottom line. I designed the quantitative part of our presentation for CEO, who chose to follow our recommendations. We estimated savings at $118MM over the duration of the contract.</li>
-                    <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li><br><br>
+                    <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li></p><br><br>
 
-                Here are what some of my previous colleagues have to say:
-                <li> Pedro is a great thrower but a bit too short to play in the league, <b>Michael Jordan, colleague at the LA Lakers</b></li>
+                <p class="main_text">Here are what some of my previous colleagues have to say:
+                <li> Pedro is a great thrower but a bit too short to play in the league, <b>Michael Jordan, colleague at the LA Lakers</b></li></p>
                 
                 <br><br><br>
             </div>
