--- a/business-consulting.html
+++ b/business-consulting.html
@@ -19,6 +19,10 @@
             align-items: flex-start; /* Align items at the top */
         }
 
+.p {
+            padding:0;
+        }
+
 
 
     .main_text-container li {
