--- a/business-consulting.html
+++ b/business-consulting.html
@@ -20,6 +20,11 @@
             align-items: flex-start; /* Align items at the top */
         }
 
+        .main_text-container {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .p {
             padding:0;
     margin:0;
@@ -55,15 +60,15 @@
 
     <main>
 
-            <div class="text-container main_text-container">
+            <div class="main_text-container">
                 <p class="main_text">
                     <font size="+1"><b>I am a BCG-trained consultant with a passion for solving data problems and meeting new people.</b></font> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. 
                     <br> <br>
                     Here are some of my favorite projects so far: </p>
                     
                 <p class="main_text"><font size="+1"><b>Profitability per product line estimation </font></b>
-                    <li><b>Where:</b> Freelancing, American Italian tourism company</li>
-                    <li><b>Problem:</b> client did not know the labor costs of each product, limiting strategical decision-making</li>
+                    <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
+                    <li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
                     <li><b>Solution:</b> I estimated labor costs across product lines. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes). Once I calculated the costs and profitability per product line, I showed some of the growth bets of the company and its largest B2B client were actually not profitable. </li>
                     <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li></p>
 
