--- a/business-consulting.html
+++ b/business-consulting.html
@@ -39,6 +39,11 @@
         padding-left: 10%;
         padding-right: 10%;
     }
+
+        .main_text p {
+    margin-top: 0;
+    margin-bottom: 1em; /* Adjust the value as needed */
+}
     </style>
 </head>
 
