--- a/business-consulting.html
+++ b/business-consulting.html
@@ -31,6 +31,12 @@
             margin-top: 0;
             margin-bottom: 1em;
         }
+
+        .main_text-list b {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 0.5em; /* Adjust as needed */
+        }
     </style>
 </head>
 
@@ -50,32 +56,34 @@
     <div class="mod_br_small"></div>
 </header>
 
-    <main>
+<main>
 
-        <div class="main_text-container">
-            <p class="main_text">
-                <font size="+1"><b>I am a BCG-trained consultant with a passion for solving data problems and meeting new people.</b></font> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business.
-            </p>
+    <div class="main_text-container">
+        <p class="main_text">
+            <b style="font-size: 1.25em;">I am a BCG-trained consultant with a passion for solving data problems and meeting new people.</b> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business.
+        </p>
 
-            <p class="main_text"><font size="+1"><b>Profitability per product line estimation </font></b></p>
-            <ul class="main_text-list">
-                <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
-                <li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
-                <li><b>Solution:</b> I estimated labor costs across product lines. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes). Once I calculated the costs and profitability per product line, I showed some of the growth bets of the company and its largest B2B client were actually not profitable. </li>
-                <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li>
-            </ul>
+        <p class="main_text">
+            <b style="font-size: 1.25em;">Profitability per product line estimation</b>
+        </p>
+        <ul class="main_text-list">
+            <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
+            <li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
+            <li><b>Solution:</b> I estimated labor costs across product lines. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes). Once I calculated the costs and profitability per product line, I showed some of the growth bets of the company and its largest B2B client were actually not profitable. </li>
+            <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li>
+        </ul>
 
-            <!-- Add other paragraphs and lists as needed -->
+        <!-- Add other paragraphs and lists as needed -->
 
-        </div>
+    </div>
 
-    </main>
+</main>
 
 <footer>
     <a href="https://www.linkedin.com/pub/pedro-girardi/110/762/75" target="_blank">
         <img class="linkedin-logo" src="linkedin.png" alt="LinkedIn Logo">
     </a>
-         &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  contact@girardi.io
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp; contact@girardi.io
 </footer>
 
 </body>
