--- a/business-consulting.html
+++ b/business-consulting.html
@@ -62,7 +62,7 @@
                 <p class="main_text">
                     <font size="+1"><b>I am a BCG-trained consultant with a passion for solving data problems and meeting new people.</b></font> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. 
                     <br> <br>
-                    Here are some of my favorite projects so far: </p>
+                    <font size="+1"><b>These are some of my favorite projects:</b> </p>
                     
                 <p class="main_text"><font size="+1"><b>Profitability per product line estimation </font></b>
                     <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
@@ -82,8 +82,11 @@
                     <li><b>Solution:</b> I analyzed transaction data to run pre-post model on the impact of partnership on sales and profitability. The analyses showed that the partnership had significantly hurt our client’s bottom line. I designed the quantitative part of our presentation for CEO, who chose to follow our recommendations. We estimated savings at $118MM over the duration of the contract.</li>
                     <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li></p>
 
-                <p class="main_text">Here are what some of my previous colleagues have to say:
-                <li> Pedro is a great thrower but a bit too short to play in the league, <b>Michael Jordan, colleague at the LA Lakers</b></li></p>
+                <p class="main_text"><font size="+1"><b>Here are what some of my previous colleagues have to say:</b></font>
+                <li> Pedro is a great thrower but a bit too short to play in the league, <i>Michael Jordan, colleague at the LA Lakers</i></li> 
+                    <br> <br>
+                <li> Pedro is a great thrower but a bit too short to play in the league, <i>Michael Jordan, colleague at the LA Lakers</i></li>
+                </p>
                 
                 <br><br><br>
             </div>
