--- a/business-consulting.html
+++ b/business-consulting.html
@@ -83,9 +83,8 @@
                     <li><b>Skills:</b> Excel modeling, data manipulation, stakeholder interviews</li></p>
 
                 <p class="main_text"><font size="+1"><b>Here are what some of my previous colleagues have to say:</b></font>
-                <li> Pedro is a great thrower but a bit too short to play in the league, <i>Michael Jordan, colleague at the LA Lakers</i></li> 
-                    <br> <br>
-                <li> Pedro is a great thrower but a bit too short to play in the league, <i>Michael Jordan, colleague at the LA Lakers</i></li>
+                <li> <q>Pedro is a great thrower but a bit too short to play in the league</q>, <i>Michael Jordan, colleague at the LA Lakers</i></li> 
+                <li> <q>Pedro is a great thrower but a bit too short to play in the league</q>, <i>Michael Jordan, colleague at the LA Lakers</i></li>
                 </p>
                 
                 <br><br><br>
