--- a/business-consulting.html
+++ b/business-consulting.html
@@ -62,7 +62,7 @@
                 <p class="main_text">
                     <font size="+1"><b>I am a BCG-trained consultant with a passion for solving data problems and meeting new people.</b></font> My extroverted side is great at connecting with stakeholders to understand the context and key pieces of information. The data geek in me can piece together messy data scattered across datasets and generate new insights. Bringing these skills together, I can provide recommendations based on a holistic understanding of the business. 
                     <br> <br>
-                    <font size="+1"><b>These are some of my favorite projects:</b></font> </p>
+                    <font size="+1"><b>These have been some of my favorite projects:</b></font> </p>
                     
                 <p class="main_text"><font size="+1"><b>Profitability per product line estimation </font></b>
                     <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
