--- a/business-consulting.html
+++ b/business-consulting.html
@@ -78,11 +78,11 @@
                     <br> <br>
                     <font size="+1"><b>These have been some of my favorite projects:</b></font> </p>
                     
-                <p class="main_text2"><font size="+1"><b>Profitability per product line estimation </font></b>
+                <p class="main_text2"><b>Profitability per product line estimation </b>
                     <li><b>Where:</b> Freelancing, Italian-American tourism company</li>
                     <li><b>Problem:</b> My client did not know the labor costs of each product, limiting strategical decision-making</li>
                     <li><b>Solution:</b> I estimated labor costs across product lines. Moreover, I identified a gap in the knowledge of physical asset costs (e.g., vans and bikes). Once I calculated the costs and profitability per product line, I showed some of the growth bets of the company and its largest B2B client were actually not profitable. </li>
-                    <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li></p>
+                    <li><b>Skills:</b> Excel modeling, interviews with 15+ employees</li> <br></p>
 
                 <p class="main_text2"><font size="+1"><b>Implementation of AdTech Product</font></b>
                     <li><b>Where:</b> Delivery Hero (Germany), working directly with LATAM, APAC, and MENA regional teams </li>
